global edit project

--- a/css/cite.css
+++ b/css/cite.css
@@ -4,6 +4,8 @@
     white-space: pre-wrap;
     position: relative;
     text-transform: uppercase;
+    white-space: pre-wrap;
+    position: relative;
 }
 
 .cite span {
