--- a/css/img-halls.css
+++ b/css/img-halls.css
@@ -5,15 +5,6 @@
     text-transform: uppercase;
 }
 
-
-.wrap div{
-    margin-bottom: 50px;
-}
-
-.wrap li {
-    list-style: none;
-}
-
 .star-wars-hall {
     height: 700px;
     background-image: url("../img/star-wars-hall.jpg");
@@ -21,20 +12,28 @@
 }
 
 .vibe {
-    display: block;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 50px;
     padding-left: 480px;
     padding-top: 200px;
     font-weight: 700;
     font-size: 70px;
     text-transform: uppercase;
+    text-align: center;
+}
+
+.wrap li {
+    margin-top: 50px;
 }
 
 .audio-hall {
     height: 700px;
     background-image: url("../img/80s-vibes-hall.jpg");
     background-size: cover;
+    
 }
 
 .wild-west-hall {
