--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,24 @@
-    * {
-        box-sizing: border-box;
-    }
-    body {
-        background-color: #1B1A1B;
-        color: #FFFFFF;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+ * {
+    box-sizing: border-box;
+}
 
-    .wrapper {
-        width: 1200px;
-        padding: 30px;
-        margin: 0 auto;
-    }
+body {
+    background-color: #1B1A1B;
+    color: #FFFFFF;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 1200px;
+    padding: 30px;
+    margin: 0 auto;
+}
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
 
-
-
+ul {
+    list-style: none;
+}
 
 
 
