--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
-@import url(style.css);
+@import url(normolize.css);
+@import url(global.css);
 @import url(img-banner.css);
 @import url(img-halls.css);
 @import url(cite.css);
