--- a/css/img-banner.css
+++ b/css/img-banner.css
@@ -14,14 +14,14 @@
     font-size: 120px;
     font-weight: 900;
     padding-left: 24px;
-    bottom: 72px;
-    left: 50px;
+    top: 65px;
+    left: 40px;
 }
 
 .logo-small {
     display: block; 
     position: relative;
     padding-left: 160px;
-    bottom: 190px;
+    top: 70px;
     font-size: 22px;
 }
