--- a/css/img-halls.css
+++ b/css/img-halls.css
@@ -3,7 +3,9 @@
     text-align: center;
     font-size: 40px;
     text-transform: uppercase;
+    margin-top: 30px;
 }
+
 
 .star-wars-hall {
     height: 700px;
@@ -17,15 +19,16 @@
     align-items: center;
     justify-content: center;
     width: 50px;
-    padding-left: 480px;
-    padding-top: 200px;
     font-weight: 700;
     font-size: 70px;
     text-transform: uppercase;
     text-align: center;
 }
 
-.wrap li {
+.halls-list li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 50px;
 }
 
