--- a/css/faq.css
+++ b/css/faq.css
@@ -7,7 +7,7 @@
     margin-bottom: 20px;
 }
 
-.questions :nth-child(even) {
+.faq__questions :nth-child(even) {
     color: white;
     background-color:  #440F51;
     content: "";
@@ -18,7 +18,7 @@
     background-position: 95%;
 }
 
-.questions :nth-child(odd) {
+.faq__questions :nth-child(odd) {
     content: "";
     background-image: url("../img/icons-svg/circle-purple.svg") ;
     background-repeat: no-repeat;
