--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,8 @@
-.cite {
+.about__text {
+    font-size: 20px;
+}
+
+.about__cite {
     display: block;
     font-size: 44px;
     white-space: pre-wrap;
@@ -8,26 +12,12 @@
     position: relative;
 }
 
-.cite span {
+.about__cite span {
     color: #6C0287;
     
 }
 
-.author {
-    display: block;
-    position: relative;
-    width: 220px;
-    height: 100px;
-    left: 840px;
-    bottom: 50px;
-    font-size: 20px;
-}
-
-.text {
-    font-size: 20px;
-}
-
-.ava {
+.about__author {
     background-image: url("../img/icons-png/avatar-founder.png");
     position: relative;
     width: 80px;
@@ -36,4 +26,14 @@
     display: block;
     left: 730px;
     top: 30px;
+}
+
+.about__author_text {
+    display: block;
+    position: relative;
+    width: 220px;
+    height: 100px;
+    left: 840px;
+    bottom: 50px;
+    font-size: 20px;
 }
