--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,10 +1,15 @@
-.our-contact li{
+.contacts li{
     display: block;
-    padding-left: 38px;
-    background-size: 20px 20px;
+    padding-left: 60px;
+    background-size: 32px 35px;
     background-repeat: no-repeat;
     background-position: 3px;
-    font-size: 18px;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.contacts li:nth-child(odd){
+    margin-bottom: 50px;
 }
 
 .locate {
@@ -19,11 +24,16 @@
     background-image: url("../img/icons-png/mail.png");
 }
 
-.img-svg {
+.icons {
     display: flex;
     column-gap: 20px;
+    padding-bottom: 35px;
 }
 
 .locate p {
     white-space: pre-wrap;
+}
+
+.address {
+    font-style: normal; 
 }
