--- a/css/halls.css
+++ b/css/halls.css
@@ -1,42 +1,37 @@
-.our-halls {
-    display: block;
-    text-align: center;
-    font-size: 40px;
-    text-transform: uppercase;
-    margin-top: 30px;
-}
-
-
 .star-wars-hall {
     height: 700px;
     background-image: url("../img/star-wars-hall.jpg");
     background-size: cover;
 }
 
-.vibe {
+.halls-link {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50px;
+    max-width: 211px;
     font-weight: 700;
     font-size: 70px;
     text-transform: uppercase;
     text-align: center;
 }
 
-.halls-list li {
+.halls__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 60px;
+}
+
+.halls__list li {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
 }
 
 .audio-hall {
     height: 700px;
     background-image: url("../img/80s-vibes-hall.jpg");
     background-size: cover;
-    
 }
 
 .wild-west-hall {
