--- a/css/global.css
+++ b/css/global.css
@@ -19,6 +19,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    max-width: 1180px;
+    margin: 0 auto;
+}
+
 .footer__title, .faq__title, .about__title, .halls__title, .reserve__title {
     display: block;
     text-align: center;
