--- a/css/halls.css
+++ b/css/halls.css
@@ -4,7 +4,7 @@
     background-size: cover;
 }
 
-.halls-link {
+.halls__link {
     display: flex;
     flex-direction: column;
     align-items: center;
