--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,6 @@
 @import url(banner.css);
 @import url(halls.css);
 @import url(about.css);
-@import url(contacts.css);
+@import url(footer.css);
 @import url(faq.css);
 @import url(reserve.css);
