--- a/css/about.css
+++ b/css/about.css
@@ -1,39 +1,96 @@
-.about__text {
+.about__ptext {
+    margin-bottom: 59px;
+}
+
+.about__blcite {
+    margin-bottom: 39px;
+}
+
+.about__text1, .about__text2 {
     font-size: 20px;
+    line-height: 28px;
+}
+
+.about__text_block p {
+    margin-bottom: 20px;
 }
 
 .about__cite {
-    display: block;
     font-size: 44px;
-    white-space: pre-wrap;
-    position: relative;
+    margin-right: 50px;
     text-transform: uppercase;
-    white-space: pre-wrap;
-    position: relative;
+    max-width: 415px;
+    line-height: 50px;
+    font-style: normal;
+}
+.about__cite p {
+    display: inline;
 }
 
-.about__cite span {
-    color: #6C0287;
-    
+.collage {
+    display: inline-block;
+    position: relative;
+    width: 600px;
+    height: 596px;
 }
 
-.about__author {
-    background-image: url("../img/icons-png/avatar-founder.png");
-    position: relative;
+.about__text_block {
+    display: flex;
+    flex-direction: column;
+    float: right;
+}
+
+.about__cite::after {
+    color: rgb(108, 2, 135);
+    font-family: Arial;
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 50px;
+    text-align: left;
+    text-transform: uppercase;
+    content: "\201D";
+}
+
+.about__cite::before {
+    position: absolute;
+    color: rgb(108, 2, 135);
+    content: "\201C";
+    font-size: 44px;
+    line-height: 0;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 900;
+    line-height: 50px;
+    right: 555px;
+
+}
+
+.about__author_avatar {
+    max-width: 389px;
     width: 80px;
     height: 80px;
-    background-repeat: no-repeat;
-    display: block;
-    left: 730px;
-    top: 30px;
+    display: inline-block;
 }
 
-.about__author_text {
-    display: block;
+.about__text_block li {
+    max-width: 500px;
+    list-style: none;
+}
+
+.about__avatar{
+    display:inline-block ;
+    max-width: 389px;
     position: relative;
-    width: 220px;
-    height: 100px;
-    left: 840px;
-    bottom: 50px;
+    left: 100px;
+}
+
+
+.about__founder {
+    display: inline-block;
+    float: right;
+    max-width: 280px;
+    padding-left: 30px;
     font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
 }
