--- a/css/banner.css
+++ b/css/banner.css
@@ -4,28 +4,30 @@
     background-image: url("../img/banner.png");
     background-repeat: no-repeat;
     background-position: right bottom;
-    background-size: 600px ;
+    background-size: 675px 762px;
     border: 1px solid rgba(0, 0, 0, 0);
-}
-
-.banner-section {
-    padding-bottom: 50px;
+    bottom: 90px;
 }
 
 .banner__logo {
     display: block;
     position: relative;
-    font-size: 130px;
+    font-size: 150px;
     font-weight: 900;
-    padding-left: 30px;
-    top: 65px;
+    top: 50px;
+    letter-spacing: -15px;
 }
 
 .banner__logo-small {
     display: block; 
     position: relative;
-    padding-left: 140px;
-    top: 70px;
+    padding-left: 105px;
+    top: 140px;
     font-size: 28px;
+    font-weight: 400;
+    line-height: 50px;
 }
 
+.banner-section {
+    padding-top: 30px;
+}
