--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,12 @@
 .footer__contacts li{
     display: block;
-    padding-left: 60px;
+    padding-left: 65px;
     background-size: 32px 35px;
     background-repeat: no-repeat;
     background-position: 3px;
     font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
     margin-bottom: 10px;
 }
 
@@ -26,7 +28,7 @@
 
 .footer__icons {
     display: flex;
-    column-gap: 20px;
+    column-gap: 28px;
     padding-bottom: 35px;
 }
 
