--- a/css/about.css
+++ b/css/about.css
@@ -1,96 +1,70 @@
-.about__ptext {
-    margin-bottom: 59px;
+
+.section__title_about {
+    margin-bottom: 46px;
 }
 
-.about__blcite {
+.about__wrapper {
+    display: flex;
+    column-gap: 80px;
+}
+
+.about__description {
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 35px;
+}
+
+.about__description:nth-child(2) {
+    margin-bottom: 48px;
+}
+
+.about__blockquote {
     margin-bottom: 39px;
 }
-
-.about__text1, .about__text2 {
-    font-size: 20px;
-    line-height: 28px;
-}
-
-.about__text_block p {
-    margin-bottom: 20px;
-}
-
-.about__cite {
+.quote {
     font-size: 44px;
-    margin-right: 50px;
-    text-transform: uppercase;
-    max-width: 415px;
     line-height: 50px;
-    font-style: normal;
-}
-.about__cite p {
-    display: inline;
-}
-
-.collage {
-    display: inline-block;
+    padding-left: 31px;
+    display: block;
+    padding-bottom: 40px;
+    padding-right: 50px;
+    text-transform: uppercase;
     position: relative;
-    width: 600px;
-    height: 596px;
+    text-wrap: balance;
 }
 
-.about__text_block {
-    display: flex;
-    flex-direction: column;
-    float: right;
-}
-
-.about__cite::after {
-    color: rgb(108, 2, 135);
-    font-family: Arial;
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 50px;
-    text-align: left;
-    text-transform: uppercase;
-    content: "\201D";
-}
-
-.about__cite::before {
+.quote:before {
     position: absolute;
-    color: rgb(108, 2, 135);
-    content: "\201C";
-    font-size: 44px;
-    line-height: 0;
-    display: inline-block;
-    text-transform: uppercase;
+    top: -12px;
+    left: 0;
+    content: "\201c";
+    color: #6C0287;
     font-weight: 900;
+    font-size: 44px;
     line-height: 50px;
-    right: 555px;
-
 }
 
-.about__author_avatar {
-    max-width: 389px;
-    width: 80px;
-    height: 80px;
-    display: inline-block;
+.quote:after {
+    content: "\201d";
+    color: #6C0287;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 50px;
 }
 
-.about__text_block li {
-    max-width: 500px;
-    list-style: none;
+.owner {
+    display: flex;
+    column-gap: 30px;
+    justify-content: end;
 }
 
-.about__avatar{
-    display:inline-block ;
-    max-width: 389px;
-    position: relative;
-    left: 100px;
-}
-
-
-.about__founder {
-    display: inline-block;
-    float: right;
+.owner__description {
     max-width: 280px;
-    padding-left: 30px;
     font-size: 20px;
-    font-weight: 400;
     line-height: 28px;
+    text-wrap: balance;
+}
+
+.owner__description__uppercase {
+    text-transform: uppercase;
 }
