--- a/css/footer.css
+++ b/css/footer.css
@@ -14,6 +14,10 @@
     margin-bottom: 50px;
 }
 
+.footer__locate span {
+    display: block;
+}
+
 .footer__locate {
     background-image: url("../img/icons-png/location.png");
 }
