--- a/css/global.css
+++ b/css/global.css
@@ -17,33 +17,10 @@ body {
     background-color: #1B1A1B;
     color: #FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.main-container {
     max-width: 1180px;
     margin: 0 auto;
     border-left: 1px solid red;
     border-right: 1px solid red;
-}
-.container {
-    max-width: 1180px;
-    margin: 0 auto;
-}
-
-.footer__title, .faq__title, .about__title, .halls__title, .reserve__title {
-    display: block;
-    text-align: center;
-    font-size: 48px;
-    text-transform: uppercase;
-}
-
-section:not(:first-child) {
-    padding: 90px 0;
-}
-
-.container {
-    max-width: 1180px;
-    margin: 0 auto;
 }
 
 img, svg {
@@ -70,9 +47,21 @@ h1, h2, h3, p, figure, fieldset, blockquote {
     margin: 0;
 }
 
-h1, h2, h3 {
-    margin-bottom: 60px;
+.section__title {
+    display: block;
+    text-align: center;
+    font-size: 48px;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+    font-weight: 700;
+    line-height: 50px;
+
 }
+
+section:not(:first-child) {
+    padding-bottom: 100px;
+}
+
 
 
 
