--- a/css/global.css
+++ b/css/global.css
@@ -19,8 +19,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     max-width: 1180px;
     margin: 0 auto;
-    border-left: 1px solid red;
-    border-right: 1px solid red;
+    
 }
 
 img, svg {
@@ -48,14 +47,18 @@ h1, h2, h3, p, figure, fieldset, blockquote {
 }
 
 .section__title {
-    display: block;
-    text-align: center;
+    display: inline-block;
     font-size: 48px;
     text-transform: uppercase;
     margin-bottom: 40px;
     font-weight: 700;
     line-height: 50px;
+    width: 980px;
+    height: 56px;
+}
 
+.container__title {
+    text-align: center;
 }
 
 section:not(:first-child) {
