--- a/css/review.css
+++ b/css/review.css
@@ -1,6 +1,5 @@
 .section__img {
     padding-left: 100px;
-    display: inline-block;
 }
 
 .section__img_photo {
@@ -16,6 +15,7 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
+    margin-left: 20px;
 }
 
 .section__caption {
@@ -24,7 +24,6 @@
     font-weight: 400;
     line-height: 28px;
     text-align: center;
-    
 }
 
 .sector__review li:not(:last-child) {
