--- a/css/global.css
+++ b/css/global.css
@@ -47,19 +47,15 @@ h1, h2, h3, p, figure, fieldset, blockquote {
 }
 
 .section__title {
-    display: inline-block;
+    display: block;
     font-size: 48px;
     text-transform: uppercase;
     margin-bottom: 40px;
     font-weight: 700;
     line-height: 50px;
-    width: 980px;
-    height: 56px;
-}
-
-.container__title {
     text-align: center;
 }
+
 
 section:not(:first-child) {
     padding-bottom: 100px;
