--- a/css/footer.css
+++ b/css/footer.css
@@ -36,10 +36,50 @@
     padding-bottom: 35px;
 }
 
-.footer__locate p {
-    white-space: pre-wrap;
+.footer__locate  span{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28px;
 }
 
 .footer__address {
     font-style: normal; 
+}
+
+.container__footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sub_footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sub_footer p, span{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+}
+
+.sub_footer_mail{
+    display: flex;
+    justify-content: end;
+}
+
+address {
+    margin-bottom: 156px;
+}
+
+footer {
+    background: linear-gradient(180.00deg, rgb(27, 26, 27),rgb(55, 10, 55) 100%);
+}
+
+footer div {
+    margin: 0 auto;
+}
+
+address {
+    display: flex;
+    justify-content: space-between;
 }
