--- a/css/global.css
+++ b/css/global.css
@@ -17,7 +17,7 @@ body {
     background-color: #1B1A1B;
     color: #FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 1180px;
+    max-width: 1440px;
     margin: 0 auto;
     
 }
@@ -61,6 +61,16 @@ section:not(:first-child) {
     padding-bottom: 100px;
 }
 
+.container {
+    max-width: 1180px;
+}
 
+section .container {
+    margin: 0 auto;
+}
+
+section {
+    width: 1440px;
+}
 
 
