--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,12 @@
 html {
     position: relative;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    --main-color: #fff;
+    --main-dark: #1b1a1b;
+    --main-purple: #440F51;
+    --main-purple-light: #CD06FF;
+    --main-menu-bg: #6C0287;
 }
 
 *,
@@ -16,19 +22,27 @@ body {
     min-height: 100vh;
     background-color: #1B1A1B;
     color: #FFFFFF;
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 1180px;
-    margin: 0 auto;
-    
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    color: var(--main-color);
+    background-color: var(--main-dark);
 }
 
-img, svg {
+img svg{
     max-width: 100%;
     height: auto;
 }
 
 button {
     cursor: pointer;
+    padding: 0;
+}
+
+input,
+textarea,
+select {
+    font-family: inherit;
 }
 
 a {
@@ -36,13 +50,29 @@ a {
     color: inherit;
 }
 
-ul {
+ul,
+ol {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-h1, h2, h3, p, figure, fieldset, blockquote {
+figure {
+    margin: 0;
+    padding: 0;
+}
+
+fieldset {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+h1,
+h2,
+h3,
+p,
+blockquote  {
     margin: 0;
 }
 
@@ -61,6 +91,27 @@ section:not(:first-child) {
     padding-bottom: 100px;
 }
 
+.container {
+    max-width: 1180px;
+    margin: 0 auto;
+}
+
+.container-max {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+section .container {
+    margin: 0 auto;
+}
+
+.section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 1440px;
+}
 
 
-
+address {
+    font-style: normal;
+}
