--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,5 @@
 @import url(faq.css);
 @import url(reserve.css);
 @import url(review.css);
-@import url(nav.css);
+@import url(header.css);
 @import url(entertainments.css);
