--- a/css/footer.css
+++ b/css/footer.css
@@ -33,7 +33,6 @@
 .footer__icons {
     display: flex;
     column-gap: 28px;
-    padding-bottom: 35px;
 }
 
 .footer__locate  span{
@@ -43,7 +42,7 @@
 }
 
 .footer__address {
-    font-style: normal; 
+    font-style: normal;
 }
 
 
@@ -63,17 +62,20 @@
     justify-content: end;
 }
 
-.footer__address {
-    margin-bottom: 156px;
-    justify-content: space-between;
-    display: flex;
-}
 
 footer {
     background: linear-gradient(180.00deg, rgb(27, 26, 27),rgb(55, 10, 55) 100%);
 }
-
-footer div {
-    margin: 0 auto;
+/*=================*/
+.footer__row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 156px;
 }
 
+.map__image {
+    display: block;
+}
+.footer {
+    padding-top: 55px;
+}
