--- a/css/global.css
+++ b/css/global.css
@@ -37,6 +37,8 @@ img svg{
 button {
     cursor: pointer;
     padding: 0;
+    background-color: transparent;
+    border: none;
 }
 
 input,
@@ -78,17 +80,12 @@ blockquote  {
 
 .section__title {
     display: block;
-    font-size: 48px;
+    font-size: 40px;
     text-transform: uppercase;
     margin-bottom: 40px;
     font-weight: 700;
     line-height: 50px;
     text-align: center;
-}
-
-
-section:not(:first-child) {
-    padding-bottom: 100px;
 }
 
 .container {
@@ -108,7 +105,6 @@ section .container {
 .section {
     padding-top: 50px;
     padding-bottom: 50px;
-    width: 1440px;
 }
 
 
