--- a/css/banner.css
+++ b/css/banner.css
@@ -64,6 +64,15 @@
     cursor: pointer;
 }
 
+.banner__button:hover, .banner__button:focus {
+    background: rgb(132, 10, 163);
+}
+
+.banner__button:active {
+    background: var(--main-purple);
+}
+
+
 .banner-column__text {
     font-size: 100px;
     font-weight: 900;
@@ -106,6 +115,17 @@
     z-index: 9999;
 }
 
+.banner__arrow-link:hover {
+    background-image: url("../img/icons-png/arrow-white.png");
+}
+
+.banner__arrow-link:active {
+    background-image: url("../img/icons-png/arrow-purple.png");
+}
+
+.banner__arrow-link:focus {
+    outline: 1px solid rgb(205, 6, 255);;
+}
 .arrow-link__image {
     display: block;
 }
