--- a/css/faq.css
+++ b/css/faq.css
@@ -18,6 +18,14 @@
     background-repeat: no-repeat;
     background-position: 95%;
 }
+.faq__questions :nth-child(even):hover {
+    background-image: url("../img/icons-png/open-hover.png");
+    cursor: pointer;
+}
+
+.faq__questions :nth-child(even):active {
+    background-image: url("../img/icons-png/open-active-white.png");
+}
 
 .faq__questions :nth-child(odd) {
     content: "";
@@ -26,6 +34,16 @@
     background-position: 95%;
     background-size: 4%;
 }
+
+.faq__questions :nth-child(odd):hover {
+    background-image: url("../img/icons-png/open-hover-purple.png");
+    cursor: pointer;
+}
+
+.faq__questions :nth-child(odd):active {
+    background-image: url("../img/icons-png/open-active-purple.png");
+}
+
 
 .question:last-child {
     margin-bottom: 0;
