--- a/css/footer.css
+++ b/css/footer.css
@@ -85,18 +85,22 @@ footer {
 .footer__mail:hover,
 .sub_footer__text:hover {
     color: var(--main-menu-bg);
+    transition-delay: 0.3s;
 }
 
 .footer__icon-link:hover {
     color: #EADEED;
+    transition-delay: 0.3s;
 }
 
 .footer__icon-link:active {
     color: #CD06FF;
+    transition-delay: 0.3s;
 }
 
 .footer__icon-link:focus {
     color: #EADEED;
     outline: 1px solid #CD06FF;
+    transition-delay: 0.3s;
 }
 
