--- a/css/header.css
+++ b/css/header.css
@@ -17,11 +17,17 @@
     margin-left: auto;
 }
 
-.header__button:hover,  .header__button:focus {
+.header__button:hover  {
     background: var(--main-menu-bg);
     border: none;
-    transition-delay: 0.3s;
+    transition: 0.3s ease;
 }
+
+.header__button:focus {
+    background: var(--main-menu-bg);
+    border: none;
+}
+
 
 .header__button:active {
     background: var(--main-purple);
@@ -49,6 +55,6 @@
 
 .nav-list__link:hover {
     color: var(--main-menu-bg);
-    
+    transition: 0.4s ease;
 }
 
